--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,26 @@
 /* css styles */
+
+img{
+	display:block;
+	margin-left: auto;
+	margin-right: auto;;
+
+}
+
 img[alt=ume] { width: 500px; }
 img[alt=tedcruz] { width: 400px; }
-img[alt=tq] { width: 500px; } 
+img[alt=tq] { width: 80%; } 
+img[alt=old_headshot] { 
+	width: 400px; 
+	padding-bottom: 0px; 
+	padding-top: 10px; 
+	
 
+} 
 
+.caption {
+	font-size: 60%;
+	padding-top:0px;
+	text-align: center;
+	margin: auto;
+}
